--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,7 @@
+source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
-platform :ios, '10.0'
+platform :ios, '12.0'
 
 target 'UUKit_Example' do
   pod 'UUKit', :path => '../'
@@ -8,6 +9,17 @@ target 'UUKit_Example' do
   target 'UUKit_Tests' do
     inherit! :search_paths
 
-    
   end
+  
+  
+  # 删除 pod 的 deployment target
+  post_install do |installer|
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
+      end
+    end
+  end
+  
+  
 end
